Build(bug): Comment out Puma plugin for solid queue as it is too much for the free database and web server to run

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,6 +137,6 @@ button {
     font-size: 1.3rem;
     font-weight: 500;
 }
-.new-comment button {
+.comment-btn {
 
 }
